--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
     "version": "0.2.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start"
+      "start": "python3 -m http.server 8000",
+      "serve": "npx serve -s . -l 3000"
     },
     "dependencies": {
       "@vercel/analytics": "^1.1.2",
       "langdetect": "^0.2.1",
-      "next": "^13.1.1",
-      "openai": "^3.1.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
+      "openai": "^3.1.0"
     },
     "engines": {
       "node": ">=14.6.0"
